added CRUD functionality for document chunks and faq
